--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1501,6 +1501,64 @@ section.lazy-placeholder:after {
 .cid-rUhvtHo7OR .b-descr {
   color: #232323;
 }
+.cid-rUhWHAKKBj {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rUhWHAKKBj .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rUhWHAKKBj .media-container-row {
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.cid-rUhWHAKKBj .mbr-text {
+  color: #767676;
+}
+.cid-rUhWHAKKBj .mbr-author-desc {
+  display: block;
+  color: #767676;
+}
+.cid-rUhWHAKKBj .mbr-author-name {
+  color: #767676;
+}
+.cid-rUhWHAKKBj .mbr-testimonial .panel-item {
+  background-color: #ffffff;
+}
+.cid-rUhWHAKKBj .mbr-testimonial .card-block {
+  -webkit-flex-grow: 0;
+  flex-grow: 0;
+  padding: 2.4rem 2.4rem 0 2.4rem;
+}
+.cid-rUhWHAKKBj .mbr-testimonial .card-block .testimonial-photo {
+  display: inline-block;
+  width: 120px;
+  height: 120px;
+  margin-bottom: 1.6rem;
+  overflow: hidden;
+  border-radius: 50%;
+}
+.cid-rUhWHAKKBj .mbr-testimonial .card-block .testimonial-photo img {
+  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+}
+.cid-rUhWHAKKBj .mbr-testimonial .card-footer {
+  padding-bottom: 2.4rem;
+  border-top: 0;
+  padding-top: 1rem;
+  word-wrap: break-word;
+  word-break: break-word;
+  background: none;
+}
+@media (max-width: 300px) {
+  .cid-rUhWHAKKBj .testimonial-photo {
+    width: 100% !important;
+    height: auto !important;
+  }
+}
 .cid-rUhwAqJpAp {
   padding-top: 15px;
   padding-bottom: 15px;
